removed row class from game info to stop stacking buttons on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ body p {
 /* buttons */
 
 .general-button {
-    margin: 15px 0 30px 0;
+    margin: 0 15px;
     background-color: yellow;
     border: 3px solid pink;
     border-radius: 0px;
@@ -119,7 +119,7 @@ body p {
 }
 
 .game-button {
-    margin: 15px 0 30px 0;
+    margin: 0 30px 0 30px;
     background-color: yellow;
     border: 3px solid pink;
     border-radius: 0px;
@@ -168,9 +168,11 @@ a:not([href]) {
 
 .game-info-container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     margin-left: 20vw;
     margin-right: 20vw;
+    /* justify-items: center; */
+    justify-content: center;
 
 }
 
